--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
 /*  your css code here. If applicable */
+
 div{
 	width:200px;
 	height:200px;
 	background-color:lightblue;
 	border:2px solid black;
 	color:purple;
+	position:relative;
 	margin-top:50%;
 	margin-left:50%;
 	transform:translate(-50%,-50%);
+	
 	text-align:center;
 }
 
